make scrollbars pretty and fix weird sticky

--- a/ui/src/main.scss
+++ b/ui/src/main.scss
@@ -36,6 +36,12 @@ $color-text-highlight: #b9c3bb;
 // constants
 $main-width: min(50em, 90%);
 
+html{
+    scrollbar-color: $color-text-highlight $color-bg-mid;
+    scrollbar-width: .75em;
+    scrollbar-gutter: stable;
+}
+
 body {
     font-family: "Montserrat";
 	background-color: $color-bg-mid;
@@ -310,6 +316,7 @@ a {
 #web-container{
 	position:sticky;
 	top:1em;
+	bottom: 2em;
     background-color: $color-bg-mid;
     flex-grow: 1;
     flex-basis:25%;
@@ -317,7 +324,7 @@ a {
 	margin: auto;
 	margin-right: auto;
 	margin-left: .5em;
-	margin-top: 3em;
+	margin-top: 2em;
 }
 
 #web-layout{
@@ -347,7 +354,11 @@ a {
 #view-bottom{
     display: flex;
     flex-direction: column;
-    height: fit-content;
+    height: 25em;
+	overflow-y: scroll;
+    scrollbar-color: $color-bg-mid $color-bg-white;
+    scrollbar-width: .75em;
+    scrollbar-gutter: stable;
 	width: 100%;
     margin: .75em;
     margin-inline: 0px;
